# TravelTogether

./: README.md
aos/: .gitignore  README.md  settings.gradle.kts
aos/app/: build.gradle.kts
aos/app/src/main/: AndroidManifest.xml
aos/app/src/main/java/com/example/traveltogether/: MyApplication.kt
aos/app/src/main/java/com/example/traveltogether/src/data/: Network.kt
aos/app/src/main/java/com/example/traveltogether/src/ui/: MainActivity.kt
aos/gradle/wrapper/: gradle-wrapper.properties
core/: .gitignore  CMakeLists.txt  README.md  build.sh
core/src/: canvas.cpp  main.cpp
dbms/: README.md
ios/: README.md
server/: README.md  index.ts  package-lock.json  package.json  socket.ts
server/dao/: README.md  sample.db.json
web/: README.md  package-lock.json  package.json
web/api/: ws.ts
web/app/: index.tsx  page.tsx
web/app/api/: base.ts
web/components/: canvas.tsx
web/src/: App.tsx
